--- a/unicafe/src/index.css
+++ b/unicafe/src/index.css
@@ -7,7 +7,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.title{
+  font-size: 25px;
+  font-weight: 800;
+  text-transform: uppercase;
 }
