--- a/unicafe/src/index.css
+++ b/unicafe/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 15px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,4 +11,9 @@ body {
   font-size: 25px;
   font-weight: 800;
   text-transform: uppercase;
+}
+
+.statistic{
+  text-transform: capitalize;
+  font-variant: small-caps;
 }
