--- a/gia-telefonica/src/index.css
+++ b/gia-telefonica/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 0 10px 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +10,16 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.error {
+  background: rgb(235, 235, 235);
+  border-radius: 5px;
+  border-style: solid;
+  color: red;
+  font-size: 20px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 10px;
+  padding: 10px;
 }
